s3 bucket feature-fix bug

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "@aws-sdk/client-s3": "^3.744.0",
+    "@aws-sdk/s3-request-presigner": "^3.744.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
