observation table feature added

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 3000
 JWT_SECRET_KEY = df56d149725cd2a511aaf4db1125e6c8
+AWS_REGION=ap-southeast-2
+DYNAMO_TABLE=10820566CloudBirdingObservations
