--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^2.0.2",
     "swagger-ui-express": "^5.0.1",
     "@aws-sdk/client-s3": "^3.744.0",
-    "@aws-sdk/s3-request-presigner": "^3.744.0"
+    "@aws-sdk/s3-request-presigner": "^3.744.0",
+    "@aws-sdk/client-dynamodb": "^3.744.0" 
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
