--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^8.3.2"
   },
