--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^3.2.0",
+    "memcached": "^2.2.2",
     "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "swagger-ui-express": "^5.0.1",
