--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DYNAMO_TABLE=10820566CloudBirdingObservations
 COGNITO_USER_POOL_ID=ap-southeast-2_V7VpemRok
 COGNITO_CLIENT_ID=7oijdto54dc9ki295lbp6kjdfa
 COGNITO_CLIENT_SECRET=1jefn511mp8661a63lvqq87ik02b256bouq9e648euuejn5i7gov
+SQS_QUEUE_URL=https://sqs.ap-southeast-2.amazonaws.com/901444280953/n10820566-ClouBirding-queue
