--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.896.0",
     "@aws-sdk/client-dynamodb": "^3.744.0",
     "@aws-sdk/client-s3": "^3.744.0",
+    "@aws-sdk/client-sqs": "^3.914.0",
     "@aws-sdk/client-ssm": "^3.896.0",
     "@aws-sdk/s3-request-presigner": "^3.744.0",
     "bcrypt": "^6.0.0",
